--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <!-- PUT YOUR CODE HERE MENU BUILT FROM: https://getbootstrap.com/docs/5.3/forms/select/#default -->
+<app-navbar></app-navbar>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
+</div>
